fixed layout issues

--- a/src/app/components/shopping-nav/shopping-nav.component.scss
+++ b/src/app/components/shopping-nav/shopping-nav.component.scss
@@ -2,17 +2,17 @@
   // padding-top: 75px;
   display: block;
 
-  &.with-search-space {
-    padding-top: 119px;
-
-    .wrapper {
-      top: 44px;
-    }
-
-    .sidenav-container {
-      top: 119px;
-    }
-  }
+  //&.with-search-space {
+  //  padding-top: 119px;
+  //
+  //  .wrapper {
+  //    top: 44px;
+  //  }
+  //
+  //  .sidenav-container {
+  //    top: 119px;
+  //  }
+  //}
 }
 
 .hamburger-icon{
