--- a/src/app/shared/components/mobile-search/mobile-search.component.scss
+++ b/src/app/shared/components/mobile-search/mobile-search.component.scss
@@ -1,11 +1,11 @@
-:host {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 999;
-  background-color: #fff;
-}
+//:host {
+//  position: fixed;
+//  top: 0;
+//  left: 0;
+//  right: 0;
+//  z-index: 999;
+//  background-color: #fff;
+//}
 
 .search-field-container {
   display: flex;
